multi-cluster-scale/manifests/argocd/ingress-argocd-server.yaml
# Source: argo-cd/templates/argocd-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: "argocd"
  labels:
    helm.sh/chart: argo-cd-5.51.6
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v2.9.3"
spec:
  ingressClassName: traefik
  rules:
    - host: "argocd.suderman.us.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
